--- a/postgres2.yml
+++ b/postgres2.yml
@@ -1,15 +1,55 @@
 scope: batman
-namespace: /pg_cluster/
+#namespace: /service/
 name: postgresql2
 
 restapi:
   listen: 127.0.0.1:8010
   connect_address: 127.0.0.1:8010
+  #  cafile: /etc/ssl/certs/ssl-cacert-snakeoil.pem
+  #  certfile: /etc/ssl/certs/ssl-cert-snakeoil.pem
+  #  keyfile: /etc/ssl/private/ssl-cert-snakeoil.key
+  # authentication:
+  #   username: username
+  #   password: password
+
+#ctl:
+#  insecure: false # Allow connections to Patroni REST API without verifying certificates
+#  certfile: /etc/ssl/certs/ssl-cert-snakeoil.pem
+#  keyfile: /etc/ssl/private/ssl-cert-snakeoil.key
+#  cacert: /etc/ssl/certs/ssl-cacert-snakeoil.pem
+
+#citus:
+#  database: citus
+#  group: 1  # worker
 
 etcd:
+  #Provide host to do the initial discovery of the cluster topology:
   host: 127.0.0.1:2379
+  #Or use "hosts" to provide multiple endpoints
+  #Could be a comma separated string:
+  #hosts: host1:port1,host2:port2
+  #or an actual yaml list:
+  #hosts:
+  #- host1:port1
+  #- host2:port2
+  #Once discovery is complete Patroni will use the list of advertised clientURLs
+  #It is possible to change this behavior through by setting:
+  #use_proxies: true
 
+#raft:
+#  data_dir: .
+#  self_addr: 127.0.0.1:2224
+#  partner_addrs:
+#  - 127.0.0.1:2222
+#  - 127.0.0.1:2223
+
+# The bootstrap configuration. Works only when the cluster is not yet initialized.
+# If the cluster is already initialized, all changes in the `bootstrap` section are ignored!
 bootstrap:
+  # This section will be written into Etcd:/<namespace>/<scope>/config after initializing new cluster
+  # and all other cluster members will use it as a `global configuration`.
+  # WARNING! If you want to change any of the parameters that were set up
+  # via `bootstrap.dcs` section, please use `patronictl edit-config`!
   dcs:
     ttl: 30
     loop_wait: 10
@@ -17,7 +57,14 @@ bootstrap:
     maximum_lag_on_failover: 1048576
     postgresql:
       use_pg_rewind: true
-      use_slots: true
+      pg_hba:
+        # For kerberos gss based connectivity (discard @.*$)
+        #- host replication replicator 127.0.0.1/32 gss include_realm=0
+        #- host all all 0.0.0.0/0 gss include_realm=0
+        - host replication replicator 127.0.0.1/32 md5
+        - host all all 0.0.0.0/0 md5
+      #  - hostssl all all 0.0.0.0/0 md5
+      #      use_slots: true
       parameters:
         wal_level: hot_standby
         hot_standby: "on"
@@ -35,22 +82,16 @@ bootstrap:
         archive_command: mkdir -p ../wal_archive && test ! -f ../wal_archive/%f && cp %p ../wal_archive/%f
       recovery_conf:
         restore_command: cp ../wal_archive/%f %p
-  initdb:
+
+  # some desired options for 'initdb'
+  initdb: # Note: It needs to be a list (some options need values, others are switches)
     - encoding: UTF8
     - data-checksums
-  pg_hba:
-    - host replication replicator 127.0.0.1/32 md5
-    - host all all 0.0.0.0/0 md5
-  users:
-    admin:
-      password: admin
-      options:
-        - createrole
-        - createdb
 
 postgresql:
   listen: 127.0.0.1:5434
   connect_address: 127.0.0.1:5434
+  #  proxy_address: 127.0.0.1:5435  # The address of connection pool (e.g., pgbouncer) running next to Patroni/Postgres. Only for service discovery.
   data_dir: data/postgresql2
   #  bin_dir:
   #  config_dir:
@@ -62,14 +103,18 @@ postgresql:
     superuser:
       username: postgres
       password: patroni
-    rewind:
+    rewind: # Has no effect on postgres 10 and lower
       username: rewind_user
       password: rewind_password
+  # Server side kerberos spn
+  #  krbsrvname: postgres
   parameters:
-    unix_socket_directories: ".."
+    # Fully qualified kerberos ticket file for the running user
+    # same as KRB5CCNAME used by the GSS
+    #    krb_server_keyfile: /var/spool/keytabs/postgres
+    unix_socket_directories: ".." # parent directory of data_dir
 tags:
   failover_priority: 20
   noloadbalance: false
   clonefrom: false
-  nosync: false
-  nostream: false
+#    replicatefrom: postgresql1
