--- a/postgres0.yml
+++ b/postgres0.yml
@@ -3,11 +3,11 @@ scope: batman
 name: postgresql0
 
 restapi:
-  listen: 127.0.0.1:8008
-  connect_address: 127.0.0.1:8008
+  listen: 10.1.3.70:8008
+  connect_address: 10.1.3.70:8008
 
 etcd:
-  host: 127.0.0.1:2379
+  host: 10.1.3.70:2379
 
 bootstrap:
   dcs:
@@ -17,30 +17,15 @@ bootstrap:
     maximum_lag_on_failover: 1048576
     postgresql:
       use_pg_rewind: true
-      use_slots: true
-      parameters:
-        wal_level: hot_standby
-        hot_standby: "on"
-        max_connections: 100
-        max_worker_processes: 8
-        wal_keep_segments: 8
-        max_wal_senders: 10
-        max_replication_slots: 10
-        max_prepared_transactions: 0
-        max_locks_per_transaction: 64
-        wal_log_hints: "on"
-        track_commit_timestamp: "off"
-        archive_mode: "on"
-        archive_timeout: 1800s
-        archive_command: mkdir -p ../wal_archive && test ! -f ../wal_archive/%f && cp %p ../wal_archive/%f
-      recovery_conf:
-        restore_command: cp ../wal_archive/%f %p
   initdb:
     - encoding: UTF8
     - data-checksums
   pg_hba:
     - host replication replicator 127.0.0.1/32 md5
+    - host replication replicator 10.1.3.22/0 md5
+    - host replication replicator 10.1.3.24/0 md5
     - host all all 0.0.0.0/0 md5
+
   users:
     admin:
       password: admin
@@ -49,11 +34,11 @@ bootstrap:
         - createdb
 
 postgresql:
-  listen: 127.0.0.1:5432
-  connect_address: 127.0.0.1:5432
-  data_dir: data/postgresql0
-  #  bin_dir:
-  #  config_dir:
+  listen: 10.1.3.19:5432
+  connect_address: 10.1.3.19:5432
+  data_dir: /var/lib/postgresql1/9.5/main
+  bin_dir: /usr/lib/postgresql1/9.5/bin/
+  config_dir: /etc/postgresql1/9.5/main
   pgpass: /tmp/pgpass0
   authentication:
     replication:
@@ -62,9 +47,6 @@ postgresql:
     superuser:
       username: postgres
       password: patroni
-    rewind:
-      username: rewind_user
-      password: rewind_password
   parameters:
     unix_socket_directories: ".."
 tags:
