--- a/postgres2.yml
+++ b/postgres2.yml
@@ -17,24 +17,24 @@ bootstrap:
     maximum_lag_on_failover: 1048576
     postgresql:
       use_pg_rewind: true
-      use_slots: true 
-      parameters:
-        wal_level: hot_standby
-        hot_standby: "on"
-        max_connections: 100
-        max_worker_processes: 8
-        wal_keep_segments: 8
-        max_wal_senders: 10
-        max_replication_slots: 10
-        max_prepared_transactions: 0
-        max_locks_per_transaction: 64
-        wal_log_hints: "on"
-        track_commit_timestamp: "off"
-        archive_mode: "on"
-        archive_timeout: 1800s
-        archive_command: mkdir -p ../wal_archive && test ! -f ../wal_archive/%f && cp %p ../wal_archive/%f
-      recovery_conf:
-        restore_command: cp ../wal_archive/%f %p
+#      use_slots: true
+#      parameters:
+#        wal_level: hot_standby
+#        hot_standby: "on"
+#        max_connections: 100
+#        max_worker_processes: 8
+#        wal_keep_segments: 8
+#        max_wal_senders: 10
+#        max_replication_slots: 10
+#        max_prepared_transactions: 0
+#        max_locks_per_transaction: 64
+#        wal_log_hints: "on"
+#        track_commit_timestamp: "off"
+#        archive_mode: "on"
+#        archive_timeout: 1800s
+#        archive_command: mkdir -p ../wal_archive && test ! -f ../wal_archive/%f && cp %p ../wal_archive/%f
+#      recovery_conf:
+#        restore_command: cp ../wal_archive/%f %p
   initdb:
     - encoding: UTF8
     - data-checksums
@@ -62,9 +62,9 @@ postgresql:
     superuser:
       username: postgres
       password: patroni
-    rewind:
-      username: rewind_user
-      password: rewind_password
+#    rewind:
+#      username: rewind_user
+#      password: rewind_password
   parameters:
     unix_socket_directories: ".."
 tags:
